# flugel

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  flugel.code-workspace  flugel_project.code-workspace  shader_compile.bat
flugel/: CMakeLists.txt  CMakeLists1.txt  xmake.lua  xmake.lua.unused  xmake0.lua
flugel/alpha_app/: CMakeLists.txt
flugel/alpha_app/src/: alpha.cpp
flugel/flugel/src/flugel/: core.hpp
flugel/flugel_engine/: CMakeLists.txt  CMakeLists0.txt
flugel/flugel_engine/src/: flugel.hpp  flugel_pch.hpp
flugel/flugel_engine/src/flugel/: app.cpp  app.hpp  core.hpp  entry_point.hpp  log.cpp  log.hpp  window.hpp
flugel/flugel_engine/src/flugel/events/: app_event.hpp  event.hpp  keyboard_event.hpp  mouse_event.hpp
flugel/flugel_engine/src/flugel/logging/: log.hpp
flugel/flugel_engine/src/flugel/test/: transform_component.cpp  transform_component.hpp
flugel/flugel_engine/src/flugel/time/: stopwatch.hpp  time.hpp
flugel/hallow_app/: CMakeLists.txt
flugel/hallow_app/src/: hallow.cpp
flugel/res/flugel/: icon.pdn  icon_placeholder_0.pdn
flugel/res/flugel/shaders/: simple_shader.glsl
flugel/src/: entry_point.hpp  flugel.hpp  flugel_pch.hpp
flugel/src/api/glfw/input/: glfw_input.cpp  glfw_input.hpp  glfw_keymap.cpp  glfw_keymap.hpp  glfw_mousemap.cpp  glfw_mousemap.hpp
flugel/src/api/glfw/window/: glfw_window.cpp  glfw_window.hpp
flugel/src/api/opengl/: opengl_buffer.cpp  opengl_buffer.hpp  opengl_render_dispatcher.cpp  opengl_render_dispatcher.hpp  opengl_shader.cpp  opengl_shader.hpp
flugel/src/api/opengl/context/: opengl_context.cpp  opengl_context.hpp
flugel/src/api/opengl/framebuffer/: opengl_frame_buffer.cpp  opengl_frame_buffer.hpp  opengl_texture_buffer.cpp  opengl_texture_buffer.hpp
flugel/src/api/opengl/vertex_array/: opengl_buffer.cpp  opengl_buffer.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp
flugel/src/api/sdl2/input/: sdl2_input.cpp  sdl2_keymap.cpp  sdl2_mousemap.cpp
flugel/src/api/sdl2/window/: sdl2_window.cpp  sdl2_window.hpp
flugel/src/core/: app.cpp  app.hpp  entry_point.cpp  entry_point.hpp  utilities.hpp  uuid.cpp  uuid.hpp
flugel/src/core/callbacks/events/: app_event.hpp  event.hpp  keyboard_event.hpp  logic_event.hpp  mouse_event.hpp  render_event.hpp  window_event.hpp
flugel/src/core/callbacks/notifier/: notifier.cpp  notifier.hpp
flugel/src/core/color/: color.cpp
flugel/src/core/events/: app_event.hpp  event.hpp  keyboard_event.hpp  mouse_event.hpp  notifier.hpp  window_event.hpp
flugel/src/core/imgui/: imgui_layer.cpp  imgui_layer.hpp
flugel/src/core/input/: glfw_input.cpp  glfw_input.hpp  input.cpp  input.hpp  key_codes.cpp  key_codes.hpp  mouse_codes.cpp  mouse_codes.hpp
flugel/src/core/input/key_codes/: glfw_key_mappings.cpp  glfw_key_mappings.hpp  key_codes.cpp  key_codes.hpp
flugel/src/core/input/mouse_codes/: glfw_mouse_mappings.cpp  glfw_mouse_mappings.hpp  mouse_codes.cpp  mouse_codes.hpp
flugel/src/core/layers/: app_layer.cpp  app_layer.hpp  engine_layer.cpp  engine_layer.hpp  layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  render_layer.cpp  render_layer.hpp
flugel/src/core/renderer/: buffer.cpp  buffer.hpp  context.hpp  render_context.cpp  render_context.hpp  render_dispatcher.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
flugel/src/core/renderer/camera/: camera.hpp
flugel/src/core/renderer/framebuffer/: frame_buffer.cpp  frame_buffer.hpp  texture_buffer.hpp
flugel/src/core/renderer/vertex_array/: buffer.cpp  buffer.hpp  vertex_array.cpp  vertex_array.hpp
flugel/src/core/thread_pool/: thread_pool.cpp  thread_pool.hpp
flugel/src/core/time/: time.hpp
flugel/src/core/window/: glfw_window.cpp  glfw_window.hpp  window.cpp  window.hpp
flugel/src/flugel/: app.cpp  app.hpp  core.hpp  entry_point.hpp  window.cpp  window.hpp
flugel/src/flugel/events/: app_event.hpp  event.hpp  keyboard_event.hpp  mouse_event.hpp  window_event.hpp
flugel/src/flugel/logging/: log.cpp  log.hpp
flugel/src/flugel/time/: stopwatch.hpp  time.cpp  time.hpp
flugel/src/helpers/: RootDir.hpp
flugel/src/platform/windows/: windows_window.cpp  windows_window.hpp
flugel/src/util/: chance.hpp  random.hpp  time.hpp  utilities.hpp  uuid.cpp  uuid.hpp
flugel/src/util/color/: color.cpp  color.hpp
flugel/src/util/color/srgb_transform/: srgb_transform.cpp  srgb_transform.hpp
flugel/src/util/logging/: log.cpp  log.hpp
flugel/src/util/time/: time.cpp  time.hpp
flugel_project/: CMakeLists.txt
flugel_project/app/: CMakeLists.txt
flugel_project/app/src/: main.cpp
flugel_project/flugel/: CMakeLists.txt
flugel_project/flugel/src/: flugel.hpp
flugel_project/hallow_app/: CMakeLists.txt
flugel_project/hallow_app/src/: hallow.cpp
res/flugel/shaders/: simple_shader.glsl  simple_texture.glsl
sandbox/: CMakeLists.txt
sandbox/src/: sandbox.cpp  sandbox_layer.hpp  test_layer.cpp  test_layer.hpp
src/: entry_point.hpp  flugel.hpp  flugel_pch.hpp
src/api/opengl/: opengl_render_dispatcher.cpp  opengl_render_dispatcher.hpp  opengl_shader.cpp  opengl_shader.hpp
src/api/vulkan/: vulkan_render_dispatcher.cpp  vulkan_render_dispatcher.hpp  vulkan_shader.cpp  vulkan_shader.hpp
src/core/: app.cpp  app.hpp
src/core/callbacks/: event_system.hpp  subscribable.cpp  subscribable.hpp
src/core/ecs/: ecs.cpp  ecs.hpp  world.cpp  world.hpp
src/core/imgui/: imgui_layer.cpp  imgui_layer.hpp
src/core/input/: input.hpp  key_codes.cpp  key_codes.hpp  mouse_codes.cpp  mouse_codes.hpp
src/core/layers/: engine_layer.cpp  engine_layer.hpp  layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  render_layer.cpp  render_layer.hpp  world_layer.cpp  world_layer.hpp
src/core/renderer/: context.cpp  context.hpp  render_dispatcher.cpp  render_dispatcher.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/core/thread_pool/: thread_pool.cpp  thread_pool.hpp
src/core/threading/: concurrent_queue.hpp  concurrent_ring_buffer.hpp  job_system.cpp  (+2 more)
src/util/: random.hpp  time.hpp  types.hpp  utilities.hpp  uuid.hpp
unused/: CMakeLists_old.txt  xmake0.lua
(+74 files in other folders)
