cmake_minimum_required(VERSION 3.16)
project(flugel_engine)

#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/$<CONFIG>/${CMAKE_SYSTEM_NAME}/lib")
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/$<CONFIG>/${CMAKE_SYSTEM_NAME}/lib")
#set(CMAKE_PDB_OUTPUT_DIRECTORY     "${PROJECT_SOURCE_DIR}/bin/$<CONFIG>/${CMAKE_SYSTEM_NAME}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/$<CONFIG>/${CMAKE_SYSTEM_NAME}")

if(WIN32)
  set(CMAKE_WIN32_EXECUTABLE $<$<OR:$<CONFIG:release>,$<CONFIG:minsizerel>>:TRUE>)
  #set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<OR:$<CONFIG:debug>,$<CONFIG:relwithdebinfo>>:Debug>")
endif()

# RENDERING API - MULTIPLE CAN BE ON AT A TIME
# > OpenGL, (Planned: Vulkan, D3D11)
# WINDOWING API - ONLY ONE SHOULD BE ON AT A TIME
# > GLFW, (Planned: SDL2, Win32)
if(WIN32)
  set(FLUGEL_OPENGL ON)
  set(FLUGEL_VULKAN OFF)
  #set(FLUGEL_D3D11  OFF)

  set(FLUGEL_GLFW  ON)
  #set(FLUGEL_SDL   OFF)
  #set(FLUGEL_WIN32 OFF)
else()
  set(FLUGEL_OPENGL ON)
  set(FLUGEL_VULKAN OFF)
  #set(FLUGEL_D3D11  OFF)

  set(FLUGEL_GLFW  ON)
  #set(FLUGEL_SDL   OFF)
  #set(FLUGEL_WIN32 OFF)
endif()

add_subdirectory(flugel)
add_subdirectory(sandbox)